# gnc

./: Cargo.toml  README.md
src/: connection.rs  event.rs  main.rs
src/nostr_client/: connection.rs  event.rs  mod.rs  request.rs  response.rs
src/tui/: app.rs  event.rs  handler.rs  ui.rs
